# Point-Cloud-Compression

./: .gitignore  .gitmodules  LICENSE  README.md
catkin_ws/src/pointcloud_to_rangeimage/: CMakeLists.txt  README.md  package.xml  setup.py
catkin_ws/src/pointcloud_to_rangeimage/cfg/: RangeImage.cfg
catkin_ws/src/pointcloud_to_rangeimage/include/pointcloud_to_rangeimage/: range_image_expand.h  utils.h
catkin_ws/src/pointcloud_to_rangeimage/launch/: VLP-32C_driver.launch  compression.launch  velodyne_compression.rviz
catkin_ws/src/pointcloud_to_rangeimage/msg/: RangeImage.msg  RangeImageCompressed.msg  RangeImageEncoded.msg
catkin_ws/src/pointcloud_to_rangeimage/params/: pointcloud_to_rangeimage.yaml
catkin_ws/src/pointcloud_to_rangeimage/scripts/: compression_decoder.py  compression_encoder.py
catkin_ws/src/pointcloud_to_rangeimage/src/: pointcloud_to_rangeimage_node.cpp  rangeimage_to_pointcloud_node.cpp
catkin_ws/src/pointcloud_to_rangeimage/src/architectures/: __init__.py  additive_gru.py  additive_lstm.py  additive_lstm_demo.py  additive_lstm_slim.py  image_compression.py  oneshot_lstm.py
catkin_ws/src/snnrmse/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/snnrmse/launch/: start_snnrmse_node.launch
catkin_ws/src/snnrmse/scripts/: snnrmse_node.py
docker/: Dockerfile  docker_build.sh  docker_eval.sh  docker_train.sh  requirements.txt  run-ros.sh
range_image_compression/: __init__.py  callbacks.py  data.py  image_utils.py  requirements.txt  train.py  utils.py
range_image_compression/architectures/: Additive_GRU.py  Additive_LSTM.py  Additive_LSTM_Demo.py  Additive_LSTM_Slim.py  Oneshot_LSTM.py
range_image_compression/configs/: __init__.py  additive_gru_cfg.py  additive_lstm_cfg.py  additive_lstm_demo_cfg.py  additive_lstm_slim_cfg.py  oneshot_lstm_cfg.py
